config/development/www.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: www
  namespace: default
spec:
  template:
    spec:
      containers:
      - name: www
        command: ["/usr/bin/www"]
        args: ["--environment","dev"]
