config/development/nginx-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  loadBalancerIP: "104.197.205.48"
