config/development/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.global-static-ip-name: "dice-magic"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  tls:
    - hosts:
      - www.dev.dicemagic.io
      - api.dev.dicemagic.io
      secretName: letsencrypt-certs
  rules:
  - host: www.dev.dicemagic.io
    http:
      paths:
      - path: /
        backend:
          serviceName: www-service
          servicePort: 80
  - host: api.dev.dicemagic.io
    http:
      paths:
      - path: /
        backend:
          serviceName: dicemagic-service
          servicePort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: grpc-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    nginx.ingress.kubernetes.io/grpc-backend: "true"
  namespace: default
spec:
  tls:
    - hosts:
      - grpc.dev.dicemagic.io
      secretName: letsencrypt-certs
  rules:
  - host: grpc.dev.dicemagic.io
    http:
      paths:
      - backend:
          serviceName: dicemagic-service
          servicePort: grpc
